<resources>
    <string name="app_name">Sigabe</string>
    <string name="nama_judul">Bencana</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_call">Emergency Call</string>
    <string name="title_chat">Chat</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_contact">Contact</string>
    <string name="title_profile">Profile</string>
    <string name="title_home">Home</string>
    <string name="API_key">AIzaSyDK6R56ofaM4rZxwy9jZX7qrPo1X1GQcA4</string>
    <string name="openDrawer">Drawer dibuka</string>
    <string name="closeDrawer">Drawer ditutup</string>
    <string name="navigation_view_item_1">Beranda</string>
    <string name="navigation_view_item_2">Profil</string>
    <string name="navigation_view_item_3">Daftar</string>
    <string name="navigasi_kategori_2">Sub Item Navigasi</string>
    <string name="navigation_view_item_4">Settings</string>
    <string name="navigation_view_item_5">About</string>
    <string name="title_activity_dashboard_content_tab">DashboardContentTab</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_survival_dashboard_tab">SurvivalDashboardTab</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="permission_rationale">Please grant location permission to start the service</string>
    <string name="permission_denied_explanation">You have not granted location permission. So the service cannot be started.</string>
    <string name="settings">settings</string>
    <string name="title_alert_no_intenet">No internet</string>
    <string name="msg_alert_no_internet">Please make sure that you have active internet connection.</string>
    <string name="no_google_playservice_available">No Google Playservice found. Please install it.</string>
    <string name="msg_location_service_not_started">Location Tracking Not Started</string>
    <string name="msg_location_service_started">Location Tracking Started</string>
    <string name="btn_label_refresh">Refresh</string>
</resources>
