<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <group android:checkableBehavior="all">
            <item
                android:id="@+id/navigation1"
                android:checked="false"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/navigation_view_item_1" />
            <item
                android:id="@+id/navigation2"
                android:checked="false"
                android:icon="@drawable/ic_profile"
                android:title="@string/navigation_view_item_2" />
            <item
                android:id="@+id/navigation3"
                android:checked="false"
                android:icon="@drawable/ic_playlist_add_check_black_24dp"
                android:title="@string/navigation_view_item_3" />
        </group>


        <item
            android:id="@+id/navigasi_kategori_2"
            android:title="@string/navigasi_kategori_2">
            <menu>
                <item
                    android:id="@+id/navigation4"
                    android:checked="false"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/navigation_view_item_4" />
                <item
                    android:id="@+id/navigation5"
                    android:checked="false"
                    android:icon="@drawable/ic_details_black_24dp"
                    android:title="@string/navigation_view_item_5" />

            </menu>
        </item>
</menu>